'this is exactly what i need'

--- a/index.html
+++ b/index.html
@@ -1,156 +1,171 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/tables.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-	<div class="span4">
-	  <table>
-	    <thead>
-	      <tr>
-		<th>s_id</th>
-		<th>s_name</th>
-		<th>d_id</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-		<td>1</td>
-		<td>Alice</td>
-		<td>2</td>
-	      </tr>
-	      <tr>
-		<td>2</td>
-		<td>Bob</td>
-		<td>3</td>
-	      </tr>
-	      <tr>
-		<td>3</td>
-		<td>Carol</td>
-		<td>2</td>
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-	<div class="span4">
-	  <table>
-	    <thead>
-	      <tr>
-		<th>s_id</th>
-		<th>s_name</th>
-		<th>d_id</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-		<td>1</td>
-		<td>Alice</td>
-		<td>2</td>
-	      </tr>
-	      <tr>
-		<td>2</td>
-		<td>Bob</td>
-		<td>3</td>
-	      </tr>
-	      <tr>
-		<td>3</td>
-		<td>Carol</td>
-		<td>2</td>
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-	<div class="span4">
-	  <table>
-	    <thead>
-	      <tr>
-		<th>s_id</th>
-		<th>s_name</th>
-		<th>d_id</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-		<td>1</td>
-		<td>Alice</td>
-		<td>2</td>
-	      </tr>
-	      <tr>
-		<td>2</td>
-		<td>Bob</td>
-		<td>3</td>
-	      </tr>
-	      <tr>
-		<td>3</td>
-		<td>Carol</td>
-		<td>2</td>
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-      </div><!-- /row -->
-      <div class="row">
-	<div class="span6">
-	  <table>
-	    <thead>
-	      <tr>
-		<th>s_id</th>
-		<th>s_name</th>
-		<th>d_id</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-		<td>1</td>
-		<td>Alice</td>
-		<td>2</td>
-	      </tr>
-	      <tr>
-		<td>2</td>
-		<td>Bob</td>
-		<td>3</td>
-	      </tr>
-	      <tr>
-		<td>3</td>
-		<td>Carol</td>
-		<td>2</td>
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-	<div class="span6">
-	  <table>
-	    <thead>
-	      <tr>
-		<th>s_id</th>
-		<th>s_name</th>
-		<th>d_id</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-		<td>1</td>
-		<td>Alice</td>
-		<td>2</td>
-	      </tr>
-	      <tr>
-		<td>2</td>
-		<td>Bob</td>
-		<td>3</td>
-	      </tr>
-	      <tr>
-		<td>3</td>
-		<td>Carol</td>
-		<td>2</td>
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-      </div>
+    <div class="wrapper">
+    <div class="element">
+      <h3>My Table Title</h3>
+      <table>
+	<thead>
+	  <tr>
+	    <th>s_id</th>
+	    <th>s_name</th>
+	    <th>d_id</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>1</td>
+	    <td>Alice</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>2</td>
+	    <td>Bob</td>
+	    <td>3</td>
+	  </tr>
+	  <tr>
+	    <td>3</td>
+	    <td>Miss. Carol Sissippi</td>
+	    <td>2</td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
+    <div class="element">
+      <h3>My Table Title 2</h3>
+      <table>
+	<thead>
+	  <tr>
+	    <th>s_id</th>
+	    <th>s_name</th>
+	    <th>d_id</th>
+	    <th>d_id_derp</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>1</td>
+	    <td>Alice</td>
+	    <td>2</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>2</td>
+	    <td>Bob</td>
+	    <td>3</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>3</td>
+	    <td>Carol</td>
+	    <td>2</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>4</td>
+	    <td>Carol-san</td>
+	    <td>2</td>
+	    <td>2</td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
+    <div class="element">
+      <h3>My Table Title</h3>
+      <table>
+	<thead>
+	  <tr>
+	    <th>s_id</th>
+	    <th>s_name</th>
+	    <th>d_id</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>1</td>
+	    <td>Alice</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>2</td>
+	    <td>Bob</td>
+	    <td>3</td>
+	  </tr>
+	  <tr>
+	    <td>3</td>
+	    <td>Carol</td>
+	    <td>2</td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
 
+    <div class="element new-element">
+      <h3>My Table Title</h3>
+      <table>
+	<thead>
+	  <tr>
+	    <th>s_id</th>
+	    <th>s_name</th>
+	    <th>d_id</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>1</td>
+	    <td>Alice</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>2</td>
+	    <td>Bob</td>
+	    <td>3</td>
+	  </tr>
+	  <tr>
+	    <td>3</td>
+	    <td>Carol</td>
+	    <td>2</td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
+    <div class="element">
+      <h3>My Table Title</h3>
+      <table>
+	<thead>
+	  <tr>
+	    <th>s_id</th>
+	    <th>s_name</th>
+	    <th>d_id</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>1</td>
+	    <td>Alice</td>
+	    <td>2</td>
+	  </tr>
+	  <tr>
+	    <td>2</td>
+	    <td>Bob</td>
+	    <td>3</td>
+	  </tr>
+	  <tr>
+	    <td>3</td>
+	    <td>Carol</td>
+	    <td>2</td>
+	  </tr>
+	</tbody>
+      </table>
+    </div>
+
+    <dl>
+      <dt>TABLE:</dt>
+      <dd>stuff about table</dd>
+    </dl>
     </div>
   </body>
 </html>
