'this is really really thank you monkey'

--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
 
     <dl>
       <dt>TABLE:</dt>
+      <dd><pre>
+SELECT * FROM FARTBAGS
+LEFT JOIN DROOLMOPS
+ON YOUR MOM;
+	</pre>
+      </dd>
+
+      <dt>TABLE:</dt>
       <dd>stuff about table</dd>
     </dl>
     </div>
