'more. you can commit that though'

--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@
 
     <dl>
       <dt>TABLE:</dt>
-      <dd><pre>
-SELECT * FROM FARTBAGS
+      <dd><code><kksel>SELECT</kksel> * FROM FARTBAGS
 LEFT JOIN DROOLMOPS
 ON YOUR MOM;
-	</pre>
+	</code>
       </dd>
 
       <dt>TABLE:</dt>
