'cool. this is gonna work'

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <body>
     <div class="wrapper">
 
-      <h1>My Big Title</h1>
+      <h1>My Big Title 2</h1>
 
       <div class="element">
 	<h3>My Table Title</h3>
@@ -178,144 +178,5 @@ ON YOUR MOM;
 	<dd>stuff about table</dd>
       </dl>
     </div>
-
-
-
-    <div class="wrapper">
-
-      <h1>My Big Title</h1>
-
-      <div class="element">
-	<h3>My Table Title</h3>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>s_id</th>
-	      <th>s_name</th>
-	      <th>d_id</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>1</td>
-	      <td>Alice</td>
-	      <td>2</td>
-	    </tr>
-	    <tr>
-	      <td>2</td>
-	      <td>Bob</td>
-	      <td>3</td>
-	    </tr>
-	    <tr>
-	      <td>3</td>
-	      <td>Miss. Carol Sissippi</td>
-	      <td>2</td>
-	    </tr>
-	  </tbody>
-	</table>
-      </div>
-
-      <div class="element">
-	<h3>My Table Title</h3>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>s_id</th>
-	      <th>s_name</th>
-	      <th>d_id</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>1</td>
-	      <td>Alice</td>
-	      <td>2</td>
-	    </tr>
-	    <tr>
-	      <td>2</td>
-	      <td>Bob</td>
-	      <td>3</td>
-	    </tr>
-	    <tr>
-	      <td>3</td>
-	      <td>Miss. Carol Sissippi</td>
-	      <td>2</td>
-	    </tr>
-	  </tbody>
-	</table>
-      </div>
-      <div class="element">
-	<h3>My Table Title</h3>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>s_id</th>
-	      <th>s_name</th>
-	      <th>d_id</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>1</td>
-	      <td>Alice</td>
-	      <td>2</td>
-	    </tr>
-	    <tr>
-	      <td>2</td>
-	      <td>Bob</td>
-	      <td>3</td>
-	    </tr>
-	    <tr>
-	      <td>3</td>
-	      <td>Miss. Carol Sissippi</td>
-	      <td>2</td>
-	    </tr>
-	  </tbody>
-	</table>
-      </div>
-      <div class="element">
-	<h3>My Table Title</h3>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>s_id</th>
-	      <th>s_name</th>
-	      <th>d_id</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>1</td>
-	      <td>Alice</td>
-	      <td>2</td>
-	    </tr>
-	    <tr>
-	      <td>2</td>
-	      <td>Bob</td>
-	      <td>3</td>
-	    </tr>
-	    <tr>
-	      <td>3</td>
-	      <td>Carol</td>
-	      <td>2</td>
-	    </tr>
-	  </tbody>
-	</table>
-      </div>
-
-      <dl>
-	<dt>TABLE:</dt>
-	<dd><code><kksel>SELECT</kksel> * FROM FARTBAGS
-LEFT JOIN DROOLMOPS
-ON YOUR MOM;
-	  </code>
-	</dd>
-
-	<dt>TABLE:</dt>
-	<dd>stuff about table</dd>
-      </dl>
-    </div><!-- /wrapper fig 2 -->
-
-
   </body>
 </html>
